--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKPlanKont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKPlanKont.xhtml
@@ -10,97 +10,121 @@
         </ui:define>
         <ui:define name="body">
             <bcf:ajaxs />
-            <pe:layout fullPage="true" >
-                <ui:include src="sub/layout/north.xhtml"/>  <!-- panel polnocny-->
-                <ui:include src="sub/layout/west_plankont.xhtml"/> 
-                <pe:layoutPane id="centralna" position="center" >
-                    <div id="ramki">
+
+            <div class="flex flex-column" style="height: 97vh;overflow-y: hidden;"> <!-- Zastąpienie pe:layout -->
+
+                <!-- North Pane -->
+                <div class="flex-none">
+                    <ui:include src="sub/layoutNowy/north.xhtml"/>  <!-- panel północny -->
+                </div>
+                <!-- główna zawartość strony -->
+                <div class="flex-grow-1 grid grid-nogutter">
+                    <!-- panel zachodni -->
+                    <div class="col-12 md:col-3 lg:col-2"  style="max-width: 200px;">
+                        <ui:include src="sub/layoutNowy/west_plankont.xhtml"/> 
                     </div>
-                    <h:form>
-                        <p:growl life="3600"  ><p:autoUpdate/></p:growl>
-                    </h:form>
-                    <p:outputPanel rendered="#{menu_plankont.file1}">
-                        <p:confirmDialog id="confirmDialog2" message="Usunąć wszystkie konta? Operacja jest nieodwracalna!"  
-                                         header="Usuwanie kont" severity="alert" widgetVar="confirm2" width="500" appendTo="@(body)"
-                                         >
-                            <h:form>
-                                <p:commandButton id="confirm" value="Akceptuj"  oncomplete="PF('confirm2').hide();"
-                                                 actionListener="#{planKontView.usunieciewszystkichKontPodatnika()}"
-                                                 style="float: left; width: 120px; margin-left: 2%;" update=":form_dialog_plankont">
-                                </p:commandButton>
-                                <p:commandButton id="decline" value="Odwołaj" onclick="PF('confirm2').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
-                            </h:form>
-                        </p:confirmDialog> 
-                        <p:confirmDialog id="confirmDialog3" message="Rozpoczynam porządkowanie wszystkich kont. Usuwanie niewłaściwych oznaczeń."  
-                                         header="Porządkowanie wszystkich kont" severity="alert" widgetVar="confirm3" width="500" appendTo="@(body)"
-                                         >
-                            <h:form>
-                                <p:commandButton id="confirm" value="Akceptuj"  oncomplete="PF('confirm3').hide();"
-                                                 actionListener="#{planKontView.porzadkowanieKontPodatnikaNowe(WpisView.podatnikObiekt, WpisView.rokWpisuSt)}"
-                                                 style="float: left; width: 120px; margin-left: 2%;" update="form_dialog_plankont:dataList">
-                                </p:commandButton>
-                                <p:commandButton id="decline" value="Odwołaj" onclick="PF('confirm3').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
-                            </h:form>
-                        </p:confirmDialog> 
-                        <p:confirmDialog id="confirmDialog5" message="Rozpoczynam porządkowanie wybranego konta. #{planKontView.selectednodekonto.pelnynumer}"  
-                                         header="Porządkowanie pojedynczego konta" severity="alert" widgetVar="confirm5" width="500" appendTo="@(body)"
-                                         >
-                            <h:form id="formporzadkowaniekonta">
-                                <p:commandButton id="confirm" value="Akceptuj"  oncomplete="PF('confirm5').hide();"
-                                                 actionListener="#{planKontView.porzadkowanieWybranegoKontaPodatnika()}"
-                                                 style="float: left; width: 120px; margin-left: 2%;" update="form_dialog_plankont">
-                                </p:commandButton>
-                                <p:commandButton id="decline" value="Odwołaj" onclick="PF('confirm5').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
-                            </h:form>
-                        </p:confirmDialog> 
-                        <p:confirmDialog id="confirmDialog4" message="Rozpoczynam porządkowanie słowników"  
-                                         header="Porządkowanie kont" severity="alert" widgetVar="confirm4" width="500" appendTo="@(body)"
-                                         >
-                            <h:form>
-                                <p:commandButton  value="Akceptuj"  oncomplete="PF('confirm4').hide();"
-                                                  actionListener="#{planKontView.porzadkujSlowniki()}"
-                                                  style="float: left; width: 120px; margin-left: 2%;" update=":form_dialog_plankont">
-                                </p:commandButton>
-                                <p:commandButton value="Odwołaj" onclick="PF('confirm4').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
-                            </h:form>
-                        </p:confirmDialog> 
-                        <ui:include src="sub/podstrony/plankont/plankont.xhtml"/>
-                        <ui:include src="sub/dialog/dialog_plankont_analityczne.xhtml"/>
-                        <ui:include src="sub/dialog/dialog_plankont_syntetyczne.xhtml"/>
-                        <ui:include src="sub/dialog/dialog_plankont_dodajslownik.xhtml"/>
-                        <ui:include src="sub/dialog/dialog_plankont_usunslownik.xhtml"/>
-                        <ui:include src="sub/dialog/dialog_plankont_edycja_nazw.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file2}">
-                        <ui:include src="sub/podstrony/plankont/plankont1.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file3}">
-                        <ui:include src="sub/podstrony/plankont/plankontnazwypl.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file4}">
-                        <ui:include src="sub/podstrony/plankont/plankontnazwy.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file5}">
-                        <ui:include src="sub/podstrony/plankont/plankontklasyfikacje.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file6}">
-                        <bcf:confirm lp="1" wiadomosc="Zaimplementować wzorcowy plan kont dla bieżącego klienta?" listener="#{planKontView.implementacjaKontWzorcowych()}" 
-                                     update=":form_dialog_plankont" listenerPresent="true"/>
-                        
-                        <ui:include src="sub/podstrony/plankont/plankontimplementacje.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file7}">
-                        <ui:include src="sub/podstrony/plankont/plankontnazwyweryfikacja.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file8}">
-                        <ui:include src="sub/podstrony/plankont/plankontimport.xhtml"/>
-                    </p:outputPanel>
-                    <p:outputPanel rendered="#{menu_plankont.file9}">
-                        <ui:include src="sub/podstrony/plankont/plankontkontopozycja.xhtml"/>
-                    </p:outputPanel>
-                    
-                </pe:layoutPane><ui:include src="sub/layout/south.xhtml"/> 
-            </pe:layout>
+
+                    <!-- panel centralny -->
+                    <div class="col-12 md:col-9 lg:col-10 flex">
+                        <div id="ramki">
+                        </div>
+                        <h:form>
+                            <p:growl life="3600"  ><p:autoUpdate/></p:growl>
+                        </h:form>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(0)}">
+                            <p:confirmDialog id="confirmDialog2" message="Usunąć wszystkie konta? Operacja jest nieodwracalna!"  
+                                             header="Usuwanie kont" severity="alert" widgetVar="confirm2" width="500" appendTo="@(body)"
+                                             >
+                                <h:form>
+                                    <p:commandButton id="confirm" value="Akceptuj"  oncomplete="PF('confirm2').hide();"
+                                                     actionListener="#{planKontView.usunieciewszystkichKontPodatnika()}"
+                                                     style="float: left; width: 120px; margin-left: 2%;" update=":form_dialog_plankont">
+                                    </p:commandButton>
+                                    <p:commandButton id="decline" value="Odwołaj" onclick="PF('confirm2').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
+                                </h:form>
+                            </p:confirmDialog> 
+                            <p:confirmDialog id="confirmDialog3" message="Rozpoczynam porządkowanie wszystkich kont. Usuwanie niewłaściwych oznaczeń."  
+                                             header="Porządkowanie wszystkich kont" severity="alert" widgetVar="confirm3" width="500" appendTo="@(body)"
+                                             >
+                                <h:form>
+                                    <p:commandButton id="confirm" value="Akceptuj"  oncomplete="PF('confirm3').hide();"
+                                                     actionListener="#{planKontView.porzadkowanieKontPodatnikaNowe(WpisView.podatnikObiekt, WpisView.rokWpisuSt)}"
+                                                     style="float: left; width: 120px; margin-left: 2%;" update="form_dialog_plankont:dataList">
+                                    </p:commandButton>
+                                    <p:commandButton id="decline" value="Odwołaj" onclick="PF('confirm3').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
+                                </h:form>
+                            </p:confirmDialog> 
+                            <p:confirmDialog id="confirmDialog5" message="Rozpoczynam porządkowanie wybranego konta. #{planKontView.selectednodekonto.pelnynumer}"  
+                                             header="Porządkowanie pojedynczego konta" severity="alert" widgetVar="confirm5" width="500" appendTo="@(body)"
+                                             >
+                                <h:form id="formporzadkowaniekonta">
+                                    <p:commandButton id="confirm" value="Akceptuj"  oncomplete="PF('confirm5').hide();"
+                                                     actionListener="#{planKontView.porzadkowanieWybranegoKontaPodatnika()}"
+                                                     style="float: left; width: 120px; margin-left: 2%;" update="form_dialog_plankont">
+                                    </p:commandButton>
+                                    <p:commandButton id="decline" value="Odwołaj" onclick="PF('confirm5').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
+                                </h:form>
+                            </p:confirmDialog> 
+                            <p:confirmDialog id="confirmDialog4" message="Rozpoczynam porządkowanie słowników"  
+                                             header="Porządkowanie kont" severity="alert" widgetVar="confirm4" width="500" appendTo="@(body)"
+                                             >
+                                <h:form>
+                                    <p:commandButton  value="Akceptuj"  oncomplete="PF('confirm4').hide();"
+                                                      actionListener="#{planKontView.porzadkujSlowniki()}"
+                                                      style="float: left; width: 120px; margin-left: 2%;" update=":form_dialog_plankont">
+                                    </p:commandButton>
+                                    <p:commandButton value="Odwołaj" onclick="PF('confirm4').hide()" type="button" style="float: right; width: 120px; margin-right: 2%;"/>   
+                                </h:form>
+                            </p:confirmDialog> 
+                            <ui:include src="sub/podstrony/plankont/plankont.xhtml"/>
+                            <ui:include src="sub/dialog/dialog_plankont_analityczne.xhtml"/>
+                            <ui:include src="sub/dialog/dialog_plankont_syntetyczne.xhtml"/>
+                            <ui:include src="sub/dialog/dialog_plankont_dodajslownik.xhtml"/>
+                            <ui:include src="sub/dialog/dialog_plankont_usunslownik.xhtml"/>
+                            <ui:include src="sub/dialog/dialog_plankont_edycja_nazw.xhtml"/>
+                        </p:outputPanel>
+
+                        <p:outputPanel rendered="#{menu_plankont.isFile(1)}">
+                            <ui:include src="sub/podstrony/plankont/plankontnowy.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(2)}">
+                            <ui:include src="sub/podstrony/plankont/plankont1.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(3)}">
+                            <ui:include src="sub/podstrony/plankont/plankontnazwypl.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(4)}">
+                            <ui:include src="sub/podstrony/plankont/plankontnazwy.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(5)}">
+                            <ui:include src="sub/podstrony/plankont/plankontklasyfikacje.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(6)}">
+                            <bcf:confirm lp="1" wiadomosc="Zaimplementować wzorcowy plan kont dla bieżącego klienta?" listener="#{planKontView.implementacjaKontWzorcowych()}" 
+                                         update=":form_dialog_plankont" listenerPresent="true"/>
+
+                            <ui:include src="sub/podstrony/plankont/plankontimplementacje.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(7)}">
+                            <ui:include src="sub/podstrony/plankont/plankontnazwyweryfikacja.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(8)}">
+                            <ui:include src="sub/podstrony/plankont/plankontimport.xhtml"/>
+                        </p:outputPanel>
+                        <p:outputPanel rendered="#{menu_plankont.isFile(9)}">
+                            <ui:include src="sub/podstrony/plankont/plankontkontopozycja.xhtml"/>
+                        </p:outputPanel>
+
+
+                    </div>
+
+                    <!-- South Pane -->
+                    <div class="flex-none">
+                        <ui:include src="sub/layoutNowy/south.xhtml"/> <!-- panel południowy -->
+                    </div>
+
+                </div>
+            </div>
         </ui:define>
     </ui:composition>
 </html>
