--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rzis_porownanie_nowy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rzis_porownanie_nowy.xhtml
@@ -13,25 +13,8 @@
         <p:ajax event="open" listener="#{pozycjaBRZestawienieNowyView.init()}" update="form_dialog_rzis_porownanie_nowy:dataList"/>
         <bcf:ajaxs/>
         <h:form id="form_dialog_rzis_porownanie_nowy">
-            <!--            <p:contextMenu for="dataList">
-                            <p:menuitem value="Nowe syntetyczne" icon="ui-icon-circle-plus" update=":form" onclick="PF('nowekontosyntetyczne').show();"/>
-                            <p:menuitem value="Nowe analityczne" icon="ui-icon-circle-plus" update=":form" onclick="PF('nowekontoanalityczne').show();"/>
-                            <p:menuitem value="Usuń" actionListener="{planKontView.usun()}" icon="ui-icon-trash" update=":form"/>
-                        </p:contextMenu>
-            -->            <script>
 
-                document.onkeypress = wcisnij;
-                function wcisnij() {
-                    if (event.keyCode == 43) {
-                        $('#form\\:rozwinwsz').click();
-                    } else if (event.keyCode == 45) {
-                        $('#form\\:zwinwsz').click();
-                    } else {
-                        return event;
-                    }
-                }
-            </script>
-            <p:panelGrid columns="9" rendered="#{!ukladBRView.listarokbiezacy.isEmpty()}">
+            <p:panelGrid columns="12" rendered="#{!ukladBRView.listarokbiezacy.isEmpty()}">
                 <p:panelGrid columns="3">
                      <h:outputText value="#{mgs.nazwaukładu}"/>
                     <h:outputText value="#{pozycjaBRZestawienieNowyView.uklad.uklad}"/>
@@ -43,14 +26,22 @@
                         <f:selectItems value="#{mce.mceList}"/>
                     </p:selectOneMenu>
                 </p:column>
-                 <h:outputText value="rok poprzedni " style="margin-left: 5px;"/>
-                 <p:inputText value="#{pozycjaBRZestawienieNowyView.bilansoddnia}" maxlength="10" size="10"> 
-                    <p:ajax event="blur" partialSubmit="true" global="false"/>
-                </p:inputText>
-                <h:outputText value="rok bieżący" style="margin-left: 5px;"/>
-                <p:inputText value="#{pozycjaBRZestawienieNowyView.bilansnadzien}" maxlength="10" size="10"> 
-                    <p:ajax event="blur" partialSubmit="true" global="false"/>
-                </p:inputText>
+               <h:outputText value="od dnia" style="margin-left: 10px;"/>
+                     <p:inputText value="#{pozycjaBRZestawienieNowyView.bilansoddnia}" maxlength="10" size="10"> 
+                         <p:ajax event="blur" partialSubmit="true" global="false"/>
+                     </p:inputText>
+                     <h:outputText value=" na dzień" style="margin-left: 5px;"/>
+                     <p:inputText value="#{pozycjaBRZestawienieNowyView.bilansnadzien}" maxlength="10" size="10"> 
+                         <p:ajax event="blur" partialSubmit="true" global="false"/>
+                     </p:inputText>
+                     <h:outputText value="od dnia RU" style="margin-left: 10px;"/>
+                     <p:inputText value="#{pozycjaBRZestawienieNowyView.bilansoddniaRokPop}" maxlength="10" size="10"> 
+                         <p:ajax event="blur" partialSubmit="true" global="false"/>
+                     </p:inputText>
+                     <h:outputText value=" na dzień RU" style="margin-left: 5px;"/>
+                     <p:inputText value="#{pozycjaBRZestawienieNowyView.bilansnadzienRokPop}" maxlength="10" size="10"> 
+                         <p:ajax event="blur" partialSubmit="true" global="false"/>
+                     </p:inputText>
 <!--                <p:commandButton id="rozwinwsz" value="rozwiń wszystkie" actionListener="#{pozycjaBRZestawienieView.rozwinwszystkie(pozycjaBRZestawienieView.rootProjektRZiS)}" update=":form_dialog_rzis_porownanie_nowy:dataList" style="float: left;" />
                 <p:commandButton id="rozwin" value="rozwiń poziom" actionListener="#{pozycjaBRZestawienieView.rozwin(pozycjaBRZestawienieView.rootProjektRZiS)}" update=":form_dialog_rzis_porownanie_nowy:dataList" style="float: left;" />
                 <p:commandButton id="zwinwsz" value="zwiń wszystkie" actionListener="#{pozycjaBRZestawienieView.zwinwszystkie(pozycjaBRZestawienieView.rootProjektRZiS)}" update=":form_dialog_rzis_porownanie_nowy:dataList" style="float: left;" />
