--- a/npkpir_23/web/ksiegowaFK/guestFKWynik.xhtml
+++ b/npkpir_23/web/ksiegowaFK/guestFKWynik.xhtml
@@ -42,7 +42,7 @@
                                     </f:facet>
                                 </p:panel>
                                 <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
-                                <ui:include src="../wspolny/sub/wynik.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                                <ui:include src="../wspolny/sub/wynikksiegowa.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
 
                             </div>
                         </div>
