drobne naprawy biurowe

--- a/npkpir_23/web/ksiegowaFK/sub/layoutNowy/west_plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/layoutNowy/west_plankont.xhtml
@@ -9,7 +9,7 @@
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
   
         <h:form>
-            <p:menu style="width: 238px; border: none;">
+            <p:menu style="border: none;">
                 <p:menuitem value="bieżący plan kont" action="#{menu_plankont.updateFile(0, true)}" icon="ui-icon-circle-arrow-e"  style="#{menu_plankont.getFileStyle(0)}"/>  
                 <p:menuitem value="nowy plan kont" action="#{menu_plankont.updateFile(1, true)}" icon="ui-icon-circle-arrow-e"  style="#{menu_plankont.getFileStyle(1)}"/>  
                 <p:menuitem value="plan kont - salda"  action="#{menu_plankont.updateFile(2, true)}" icon="ui-icon-circle-arrow-e"  style="#{menu_plankont.getFileStyle(2)}"/>  
